--- a/files/ch_f1.html
+++ b/files/ch_f1.html
@@ -55,6 +55,9 @@
 								<li style="padding-left: 15px">
 									<a href="charlie_horse.html">Charlie Horse Log</a>
 								</li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2 Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
@@ -86,7 +89,7 @@
 				<div class="col-sm-2">
 				</div>
 				<div class="col-sm-2">
-					<a class="btn btn-lg btn-info" href="ch_f10.html" role="button">Previous</a>
+					<a class="btn btn-lg btn-info" href="ch_f11.html" role="button">Previous</a>
 				</div>
 				<div class="col-sm-4">
 					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 1</h1>
@@ -140,11 +143,11 @@
 					alt="Charlie Brown on the payload bay">
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight1/CH_F1_splash.jpg" 
+				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight1/CH_F1_splash.jpg" 
 					alt="Rocket on the launch rail">
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight1/CH_F1_photo2.jpg" 
+				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight1/CH_F1_photo2.jpg" 
 					alt="Recovering the rocket">
 			</div>
 		</div>
