--- a/files/ch_f10.html
+++ b/files/ch_f10.html
@@ -55,6 +55,9 @@
 								<li style="padding-left: 15px">
 									<a href="charlie_horse.html">Charlie Horse Log</a>
 								</li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2 Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
@@ -93,7 +96,7 @@
 					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 10</h1>
 				</div>
 				<div class="col-sm-2">
-					<a class="btn btn-lg btn-info" href="ch_f1.html" role="button">Next</a>
+					<a class="btn btn-lg btn-info" href="ch_f11.html" role="button">Next</a>
 				</div>
 				<div class="col-sm-2">
 				</div>
