--- a/files/ch_f4.html
+++ b/files/ch_f4.html
@@ -55,6 +55,9 @@
 								<li style="padding-left: 15px">
 									<a href="charlie_horse.html">Charlie Horse Log</a>
 								</li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2 Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
@@ -148,7 +151,7 @@
 					alt="Line to check in for a flight">
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight4/CH_F4_photo2.jpg" 
+				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight4/CH_F4_photo2.jpg" 
 					alt="Photo of used motor nozzle">
 			</div>
 		</div>
