--- a/files/ch_f6.html
+++ b/files/ch_f6.html
@@ -55,6 +55,9 @@
 								<li style="padding-left: 15px">
 									<a href="charlie_horse.html">Charlie Horse Log</a>
 								</li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2 Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
@@ -166,11 +169,11 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight6/CH_F6_photo1.jpg" 
+				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight6/CH_F6_photo1.jpg" 
 					alt="Photo at the apogee of flight">
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight6/CH_F6_photo2.jpg" 
+				<img class="fifth-slide" src="../images/hpr_rockets/charlie_horse/Flight6/CH_F6_photo2.jpg" 
 					alt="Photo of the camp at Lucerne Dry Lake">
 			</div>
 		</div>
