--- a/files/ch_f7.html
+++ b/files/ch_f7.html
@@ -55,6 +55,9 @@
 								<li style="padding-left: 15px">
 									<a href="charlie_horse.html">Charlie Horse Log</a>
 								</li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2 Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
@@ -164,7 +167,7 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight7/CH_F7_photo1.jpg" 
+				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight7/CH_F7_photo1.jpg" 
 					alt="Photo of new rocket stand">
 			</div>
 		</div>
