--- a/files/ch_f8.html
+++ b/files/ch_f8.html
@@ -55,6 +55,9 @@
 								<li style="padding-left: 15px">
 									<a href="charlie_horse.html">Charlie Horse Log</a>
 								</li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2 Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
@@ -154,11 +157,11 @@
 				</div>
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight8/CH_F8_photo1.jpg" 
+				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight8/CH_F8_photo1.jpg" 
 					alt="Photo of rockets at the RRS MTA">
 			</div>
 			<div class="item">
-				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight8/CH_F8_photo2.jpg" 
+				<img class="fourth-slide" src="../images/hpr_rockets/charlie_horse/Flight8/CH_F8_photo2.jpg" 
 					alt="Photo of Xavier helping recovery post-flight">
 			</div>
 		</div>
