--- a/files/hpr.html
+++ b/files/hpr.html
@@ -55,6 +55,9 @@
 								<li style="padding-left: 15px">
 									<a href="charlie_horse.html">Charlie Horse Log</a>
 								</li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2 Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
@@ -152,7 +155,8 @@
 				(who has been on every flight).</p>
 				<p>More details from each flight including data plots, photos, and videos are available 
 				in the <a href="charlie_horse.html">Charlie Horse Flight Log.</a> A video made from footage of 
-				Charlie Horse's 10th flight is available <a href="ch_f10.html#Photos">here</a>.</p>
+				Charlie Horse's 10th flight is available <a href="ch_f10.html#Photos">here</a>. On November 7, 
+				2020 Charlie Horse became my first rocket to fly faster than Mach 1.0!</p>
 			</div>
 		</div>
 	
