--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 								<li style="padding-left: 15px">
 									<a href="files/charlie_horse.html">Charlie Horse Log</a>
 								</li>
+								<li style="padding-left: 15px">
+									<a href="files/x2_log.html">X2 Log</a>
+								</li>
 							<li><a href="files/liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="files/flare.html">Education & Outreach</a></li>
 						</ul>
