--- a/files/ch_f3.html
+++ b/files/ch_f3.html
@@ -55,6 +55,9 @@
 								<li style="padding-left: 15px">
 									<a href="charlie_horse.html">Charlie Horse Log</a>
 								</li>
+								<li style="padding-left: 15px">
+									<a href="x2_log.html">X2 Log</a>
+								</li>
 							<li><a href="liquid_rockets.html">Liquid Engines</a></li>
 							<li><a href="flare.html">Education & Outreach</a></li>
 						</ul>
@@ -153,7 +156,7 @@
 					alt="Charlie Brown on the payload bay">
 			</div>
 			<div class="item">
-				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight3/CH_F3_splash.jpg" 
+				<img class="third-slide" src="../images/hpr_rockets/charlie_horse/Flight3/CH_F3_splash.jpg" 
 					alt="Close up on Charlie Brown">
 			</div>
 		</div>
