Updated typos & wording.

--- a/files/X2_f1.html
+++ b/files/X2_f1.html
@@ -122,7 +122,8 @@
 				Reaction Research Society</a> Mojave Test Area launch site. The launch was documented by a pad-side Go Pro video camera,
 				and still photos captured by Xavier Marshall on his camera. The rocket was named the X2 after the Bell X-1, and painted to mimic 
 				its namesake, because it was expected to be my first rocket to break the sound barrier. However, on the launch day I opted to put 
-				a less powerful motor in this rocket, and instead flew Charlie Horse on the J520 - which resulted in breaking the sound barrier!</p>
+				a less powerful motor in this rocket. The powerful J520 motor flew on my other rocket <a href="charlie_horse.html">Charlie Horse</a>
+				that day - a flight which became my first to break the sound barrier!</p>
 				<p>This was the first flight I've used with a Missileworks RRC3 dual deployment flight computer, and it performed exactly as 
 				expected.</p>
 				<p>The flight was a complete success! The drouge parachute deployed at apogee, the main parachute deployed 500 ft AGL, and the 
