--- a/files/x2_log.html
+++ b/files/x2_log.html
@@ -141,7 +141,7 @@
 				<tr>
 				  <th scope="row">1</th>
 				  <td>11/7/2020</td>
-				  <td>CTI J287-SS</td>
+				  <td>CTI I287-SS</td>
 				  <td><a href="http://www.rrs.org/facilities/" target="_blank">MTA</a></td>
 				  <td>2,535</td>
 				  <td>0.46</td>
