--- a/files/hpr.html
+++ b/files/hpr.html
@@ -150,8 +150,8 @@
 			<p><p/>
 				<p>I built this rocket in 2016 from a Madcow Torrent kit and dubbed it "Charlie Horse."
 				The rocket's maiden voyage was in August of that year and earned me a Tripoli Level 1
-				certification. Charlie Horse has flown a total of 10 times to date and has carried 
-				various payloads including a camera, a GPS tracker, and a Charlie Brown figurine 
+				certification. Charlie Horse has flown over 10 times to date and has carried 
+				various payloads including a camera, GPS trackers, and a Charlie Brown figurine 
 				(who has been on every flight).</p>
 				<p>More details from each flight including data plots, photos, and videos are available 
 				in the <a href="charlie_horse.html">Charlie Horse Flight Log.</a> A video made from footage of 
