Removed buttons from X2 launch 1 page.

--- a/files/X2_f1.html
+++ b/files/X2_f1.html
@@ -89,13 +89,13 @@
 				<div class="col-sm-2">
 				</div>
 				<div class="col-sm-2">
-					<a class="btn btn-lg btn-info" href="#" role="button">Previous</a>
+					<!-- <a class="btn btn-lg btn-info" href="#" role="button">Previous</a> -->
 				</div>
 				<div class="col-sm-4">
 					<h1 style="margin-top: 5px; margin-bottom: 5px">X2 Flight 1</h1>
 				</div>
 				<div class="col-sm-2">
-					<a class="btn btn-lg btn-info" href="#" role="button">Next</a>
+					<!-- <a class="btn btn-lg btn-info" href="#" role="button">Next</a> -->
 				</div>
 				<div class="col-sm-2">
 				</div>
