Addition of Charlie Horse launches 12-17.

--- a/files/ch_f1.html
+++ b/files/ch_f1.html
@@ -89,7 +89,7 @@
 				<div class="col-sm-2">
 				</div>
 				<div class="col-sm-2">
-					<a class="btn btn-lg btn-info" href="ch_f11.html" role="button">Previous</a>
+					<a class="btn btn-lg btn-info" href="ch_f17.html" role="button">Previous</a>
 				</div>
 				<div class="col-sm-4">
 					<h1 style="margin-top: 5px; margin-bottom: 5px">Charlie Horse Flight 1</h1>
@@ -110,7 +110,7 @@
 		<p class="lead">Tripoli Level 1 Certification Flight</p>
 		<div class="row featurette" style="width: 90%; padding-left:15px">
 			<p><p/>
-				<p>Flight #1 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
+				<p>Flight #1 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
 				launch site and was used to successfully earn me a level 1 certification with the Tripoli Rocketry Association. 
 				A video of the launch was recorded with a cell phone and can be seen below.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has since flown on every flight of this rocket. The parachute 
@@ -170,7 +170,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2020 Keith Yoerg</p>
+			<p>&#169; 2023 Keith Yoerg</p>
 		</div>
 	</footer>
 	
