--- a/files/ch_f2.html
+++ b/files/ch_f2.html
@@ -110,7 +110,7 @@
 		<p class="lead">The mysterious launch</p>
 		<div class="row featurette" style="width: 90%; padding-left:15px">
 			<p><p/>
-				<p>Flight #2 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
+				<p>Flight #2 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
 				launch site. A video of the launch was recorded with a cell phone and can be seen below.</p>
 				<p>A Charlie Brown figurine that has flown on every flight in this rocket was the only payload. The parachute 
 				on this launch was deployed by the motor. Because there was no flight computer, the max altitude and velocity 
@@ -162,7 +162,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2020 Keith Yoerg</p>
+			<p>&#169; 2023 Keith Yoerg</p>
 		</div>
 	</footer>
 	
