--- a/files/ch_f4.html
+++ b/files/ch_f4.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #4 was conducted at the at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
+				<p>Flight #4 was conducted at the at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
 				launch site during the 2019 Tripoli National Sport Launch (NSL). Charlie Horse's first launch of the event was the first 
 				of my launches to be documented by a pad-side Go Pro camera, a slow-motion video of which can be seen below.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight and a Stratologger CF dual deployment 
@@ -174,7 +174,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2020 Keith Yoerg</p>
+			<p>&#169; 2023 Keith Yoerg</p>
 		</div>
 	</footer>
 	
