--- a/files/ch_f7.html
+++ b/files/ch_f7.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #7 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
+				<p>Flight #7 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
 				launch site. The launch was documented by a pad-side Go Pro camera, an onboard camera, and a video taken on 
 				my cell phone all of which can be seen below.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight and a Stratologger CF dual deployment 
@@ -190,7 +190,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2020 Keith Yoerg</p>
+			<p>&#169; 2023 Keith Yoerg</p>
 		</div>
 	</footer>
 	
