--- a/files/ch_f9.html
+++ b/files/ch_f9.html
@@ -118,11 +118,11 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #9 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
+				<p>Flight #9 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
 				launch site. A Go Pro camera was set up to take video beside the launch pad. The first attempt at a launch burned 
 				the igniter without starting the motor, which was recorded by the Go Pro. Unfortunately there was a malfunction 
 				when starting the camera for the second, successful launch attempt so no pad-side footage was recorded of the launch. The only  
-				recorded video came from the onboard camera, becasue I was using my cell phone to test out the newly installed 
+				recorded video came from the onboard camera, because I was using my cell phone to test out the newly installed 
 				GPS tracker.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, a Stratologger CF dual deployment 
 				flight computer, and was the first flight with the Eggfinder TX GPS Transmitter onboard. The GPS signal is sent from the rocket 
@@ -184,7 +184,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2020 Keith Yoerg</p>
+			<p>&#169; 2023 Keith Yoerg</p>
 		</div>
 	</footer>
 	
