--- a/files/charlie_horse.html
+++ b/files/charlie_horse.html
@@ -103,11 +103,64 @@
 			<li data-target="#myCarousel" data-slide-to="7"></li>
 			<li data-target="#myCarousel" data-slide-to="8"></li>
 			<li data-target="#myCarousel" data-slide-to="9"></li>
+			<li data-target="#myCarousel" data-slide-to="10"></li>
+			<li data-target="#myCarousel" data-slide-to="11"></li>
+			<li data-target="#myCarousel" data-slide-to="12"></li>
+			<li data-target="#myCarousel" data-slide-to="13"></li>
+			<li data-target="#myCarousel" data-slide-to="14"></li>
 		</ol>
 		<!-- Carousel Items -->
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
-				<img class="first-slide" src="../images/hpr_rockets/charlie_horse/Flight11/CH_F11_pad.gif" alt="Launch 11 GIF">
+				<img class="first-slide" src="../images/hpr_rockets/charlie_horse/Flight11/CH_F11_pad.gif" alt="Launch 17 GIF">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="ch_f17.html" role="button">Flight 17</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 16 GIF">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="ch_f16.html" role="button">Flight 16</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 15 GIF">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="ch_f15.html" role="button">Flight 15</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 14 GIF">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="ch_f14.html" role="button">Flight 14</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 13 GIF">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="ch_f13.html" role="button">Flight 13</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 12 GIF">
+				<div class="container">
+					<div class="carousel-caption">
+						<p><a class="btn btn-lg btn-info" href="ch_f12.html" role="button">Flight 12</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<img class="second-slide" src="../images/hpr_rockets/charlie_horse/Flight10/CH_F10_pad.gif" alt="Launch 11 GIF">
 				<div class="container">
 					<div class="carousel-caption">
 						<p><a class="btn btn-lg btn-info" href="ch_f11.html" role="button">Flight 11</a></p>
@@ -227,6 +280,60 @@
 				</thead>
 				<tbody>
 				<tr>
+				  <th scope="row">17</th>
+				  <td>6/17/2023</td>
+				  <td>Yoerg I3xx-Red</td>
+				  <td><a href="https://friendsofamateurrocketry.org/" target="_blank">FAR</a></td>
+				  <td>2,820</td>
+				  <td>0.42</td>
+				  <td><a href="ch_f17.html">Report & Photos</a></td>
+				</tr>
+				<tr>
+				  <th scope="row">16</th>
+				  <td>6/4/2023</td>
+				  <td>Newman I117-Everclear</td>
+				  <td><a href="https://friendsofamateurrocketry.org/" target="_blank">FAR</a></td>
+				  <td>2,108</td>
+				  <td>0.34</td>
+				  <td><a href="ch_f16.html">Report & Photos</a></td>
+				</tr>
+				<tr>
+				  <th scope="row">15</th>
+				  <td>6/11/2022</td>
+				  <td>CTI J285-Classic</td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
+				  <td>3,541</td>
+				  <td>0.51</td>
+				  <td><a href="ch_f15.html">Report & Photos</a></td>
+				</tr>
+				<tr>
+				  <th scope="row">14</th>
+				  <td>4/9/2022</td>
+				  <td>CTI J255-RL</td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
+				  <td>3,112</td>
+				  <td>0.47</td>
+				  <td><a href="ch_f14.html">Report & Photos</a></td>
+				</tr>
+				<tr>
+				  <th scope="row">13</th>
+				  <td>3/12/2022</td>
+				  <td>CTI J520-SK</td>
+				  <td><a href="http://www.rrs.org/facilities/" target="_blank">MTA</a></td>
+				  <td>4,629</td>
+				  <td>0.84</td>
+				  <td><a href="ch_f13.html">Report & Photos</a></td>
+				</tr>
+				<tr>
+				  <th scope="row">12</th>
+				  <td>4/10/2021</td>
+				  <td>CTI I280-SS</td>
+				  <td><a href="http://www.rrs.org/facilities/" target="_blank">MTA</a></td>
+				  <td>2,361</td>
+				  <td>0.37</td>
+				  <td><a href="ch_f12.html">Report & Photos</a></td>
+				</tr>
+				<tr>
 				  <th scope="row">11</th>
 				  <td>11/7/2020</td>
 				  <td>CTI J520-SK</td>
@@ -248,7 +355,7 @@
 				  <th scope="row">9</th>
 				  <td>2/8/2020</td>
 				  <td>CTI J520-SK</td>
-				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>4,613</td>
 				  <td>0.72</td>
 				  <td><a href="ch_f9.html">Report & Photos</a></td>
@@ -266,7 +373,7 @@
 				  <th scope="row">7</th>
 				  <td>8/10/2019</td>
 				  <td>AT J425-R</td>
-				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>3,649</td>
 				  <td>0.63</td>
 				  <td><a href="ch_f7.html">Report & Photos</a></td>
@@ -275,7 +382,7 @@
 				  <th scope="row">6</th>
 				  <td>7/20/2019</td>
 				  <td>AT J435-WS</td>
-				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>4,258</td>
 				  <td>0.67</td>
 				  <td><a href="ch_f6.html">Report & Photos</a></td>
@@ -284,7 +391,7 @@
 				  <th scope="row">5</th>
 				  <td>6/8/2019</td>
 				  <td>CTI J520-SK</td>
-				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>4,642</td>
 				  <td>0.89</td>
 				  <td><a href="ch_f5.html">Report & Photos</a></td>
@@ -293,7 +400,7 @@
 				  <th scope="row">4</th>
 				  <td>6/8/2019</td>
 				  <td>AT J425-R</td>
-				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>3,948</td>
 				  <td>0.69</td>
 				  <td><a href="ch_f4.html">Report & Photos</a></td>
@@ -302,7 +409,7 @@
 				  <th scope="row">3</th>
 				  <td>6/11/2017</td>
 				  <td>CTI J381-SK</td>
-				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>3,514</td>
 				  <td>0.59</td>
 				  <td><a href="ch_f3.html">Report & Photos</a></td>
@@ -311,7 +418,7 @@
 				  <th scope="row">2</th>
 				  <td>???</td>
 				  <td>CTI I540-WT</td>
-				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>No Logger</td>
 				  <td>No Logger</td>
 				  <td><a href="ch_f2.html">Report & Photos</a></td>
@@ -320,7 +427,7 @@
 				  <th scope="row">1</th>
 				  <td>8/13/2016</td>
 				  <td>CTI I255-RL</td>
-				  <td><a href="https://rocstock.org/site/" target="_blank">ROC</a></td>
+				  <td><a href="https://rocstock.org/" target="_blank">ROC</a></td>
 				  <td>No Logger</td>
 				  <td>No Logger</td>
 				  <td><a href="ch_f1.html">Report & Photos</a></td>
