--- a/files/ch_f3.html
+++ b/files/ch_f3.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="col-md-7 col-md-pull-5">
 			<p><p/>
-				<p>Flight #3 was conducted at the <a href="https://rocstock.org/site/" target="_blank">Lucerne Dry Lake</a></td> 
+				<p>Flight #3 was conducted at the <a href="https://rocstock.org/" target="_blank">Lucerne Dry Lake</a></td> 
 				launch site and earned me a level 2 certification with the Tripoli Rocketry Association. 
 				A video of the launch was recorded with a cell phone and can be seen below.</p>
 				<p>The payload bay carried a Charlie Brown figurine that has flown on every flight, and was the first flight
@@ -179,7 +179,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div>
-			<p>&#169; 2020 Keith Yoerg</p>
+			<p>&#169; 2023 Keith Yoerg</p>
 		</div>
 	</footer>
 	
